# rust-llm-stack

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/citecite/: Cargo.toml  README.md
crates/citecite/src/: lib.rs
crates/embedrank/: Cargo.toml  README.md
crates/embedrank/src/: lib.rs
crates/promptbudget/: Cargo.toml  LICENSE-APACHE  README.md
crates/promptbudget/src/: lib.rs
crates/ragmetric/: Cargo.toml  README.md
crates/ragmetric/src/: lib.rs
crates/stopstream/: Cargo.toml  LICENSE-MIT  README.md
crates/stopstream/src/: lib.rs
